# INKI-Software

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Kconfig  README.md  nrf52840dk_nrf52840.overlay  platformio.ini  pm_static.yml  prj.conf
.pio/libdeps/adafruit_feather_nrf52840/Adafruit EPD/: .piopm
.pio/libdeps/nrf52840_dk_adafruit/: lv_conf.h
.pio/libdeps/nrf52840_dk_adafruit/Adafruit DRV2605 Library/: .piopm
.pio/libdeps/nrf52840_dk_adafruit/Adafruit EPD/src/drivers/: Adafruit_SSD1608.h
.pio/libdeps/nrf52840_dk_adafruit/RTClib/: .piopm
.pio/libdeps/nrf52840_dk_adafruit/lvgl/: lv_demo_conf.h
.pio/libdeps/nrf52840_dk_adafruit/lvgl/src/core/: lv_refr.c
.pio/libdeps/nrf52840_dk_adafruit/lvgl/src/font/: extra_symbols_40.c  hyperlegible_10.c  hyperlegible_13.c  hyperlegible_20.c  hyperlegible_26.c  hyperlegible_30.c  hyperlegible_48.c  hyperlegible_64.c  hyperlegible_72.c
boards/: nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  nrf5340dk_nrf5340_cpuapp.conf  nrf5340dk_nrf5340_cpuapp.overlay
child_image/mcuboot/: prj.conf
docs/source/: 14978970679278292.ods  conf.py  index.rst  introduction.rst
docs/source/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/source/_build/html/.doctrees/: environment.pickle  index.doctree
docs/source/_build/html/_sources/: index.rst.txt
dts/bindings/: inki,ssd16xx.yaml
lib/4g-epd1in54/: 4g-epd1in54.h  4g-epdif.cpp  4g-epdif.h  4g-epdin54.cpp
lib/epd1in54/: epd1in54.cpp  epd1in54.h  epdif.cpp  epdif.h
lib/max30102/: max30102.h
src/: INKI_BOOT_IMG.c  gpio.h  lv_conf.h  main.c  main.cpp  mark1_boot_img.c  workspace.code-workspace
src/lib/d_stack/: stack.c  stack.h
src/lib/d_vector/: vector.c  vector.h
src/lib/disk/: disk.c  disk.h
src/lib/display/: CMakeLists.txt  Kconfig  module.yml
src/lib/display/inki_ssd16xx/: Kconfig.inki_ssd16xx  inki_ssd16xx.c  inki_ssd16xx.cmake  inki_ssd16xx_regs.h
src/lib/fs/: CMakeLists.txt  Kconfig  module.yml  xipa_dev.h  xipafs.c  xipafs.h  zephyrmapping.h
src/lib/fs/drivers/: xipa_dev.h
src/lib/fs/drivers/nrf_xip_nor/: Kconfig.nrf_xip_nor  nrf_xip_nor.c  nrf_xip_nor.cmake
src/lib/icc/: CMakeLists.txt  Kconfig  README.md  icc.h  lp_uarte.c  lp_uarte.h  lp_uarte_dev.h  module.yml
src/lib/icc/drivers/nrf_lp_uarte/: Kconfig.nrf_lp_uarte  nrf53_lp_uarte.c  nrf_lp_uarte.c  nrf_lp_uarte.cmake
src/lib/inki_gpiote/: inki_gpiote.c  inki_gpiote.h
src/lib/lp_uarte/: CMakeLists.txt  Kconfig  lp_uarte.c  lp_uarte.h  lp_uarte_cfg.h  lp_uarte_dev.h  module.yml
src/lib/lp_uarte/drivers/nrf_lp_uarte/: Kconfig.nrf_lp_uarte  nrf53_lp_uarte.c  nrf_lp_uarte.c  nrf_lp_uarte.cmake
src/lib/terminator/: terminator.h
src/lib/vector/: vector.c  vector.h
